@@ -9,6 +9,7 @@ x.x:
 - fixed: deprecated notices in combination with widget_manager
 - fixed: pagination in group members widget
 - fixed: wrong action link in remove invitation
+- fixed: bug with creating group invitations
 - changed: sending of group invite e-mails to be more generic
 - changed: restored limited functionality of group activity river
 
